--- a/Clase8/sitio/posicionamineto.html
+++ b/Clase8/sitio/posicionamineto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href=../css/estilo.css">
+    <link rel="stylesheet" href="../css/estilo.css">
     <link rel="stylesheet" href="../css/posicionamiento.css">
     <!--Link a fontawesome-->
     <script src="https://kit.fontawesome.com/10489d3424.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
         <section>
             <article>
                 <h4>Articulo N°1</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi dolore molestias nam aut earum maiores optio quisquam velit repellendus recusandae voluptatum praesentium fuga voluptate, iste iure repellat voluptas ut nemo.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi dolore molestias nam aut earum maiores optio quisquam velit repellendus recusandae voluptatum praesentium fuga voluptate, iste iure repellat nemo.</p>
             </article>
             <article class="pares">
                 <h4>Arituclo N°2</h4>
